--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>BOTF</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>BOTF</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:title" content="BOTF Lineup" />
+    <meta
+      property="og:image"
+      content="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpikwizard.com%2Fmost-popular%2Fsquirrel-pictures&psig=AOvVaw0dzBLrDD7UAll7vW7xLMn9&ust=1649528425018000&source=images&cd=vfe&ved=0CAoQjRxqFwoTCKiwq7SKhfcCFQAAAAAdAAAAABAF"
+    />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpikwizard.com%2Fmost-popular%2Fsquirrel-pictures&psig=AOvVaw0dzBLrDD7UAll7vW7xLMn9&ust=1649528425018000&source=images&cd=vfe&ved=0CAoQjRxqFwoTCKiwq7SKhfcCFQAAAAAdAAAAABAF"
+    />
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
